{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 281,
  "lineage": "75527b77-5721-4ead-d9ad-222987ec01a4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0187a80cdd2c8ed85",
            "arn": "arn:aws:ec2:us-east-1:154061203144:elastic-ip/eipalloc-0187a80cdd2c8ed85",
            "association_id": "eipassoc-0200d92f09b928b66",
            "domain": "vpc",
            "id": "eipalloc-0187a80cdd2c8ed85",
            "instance": "i-0ee3e72c856b1588e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0224252419b42b868",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-52-6-185-146.compute-1.amazonaws.com",
            "public_ip": "52.6.185.146",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "django-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:154061203144:instance/i-0ee3e72c856b1588e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee3e72c856b1588e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0224252419b42b868"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0224252419b42b868",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.91",
            "public_ip": "52.6.185.146",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08841425c70f6848c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ee60fc76c075b65",
            "tags": {
              "Name": "django-instance"
            },
            "tags_all": {
              "Name": "django-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0937b02a13fc307b2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_network_interface.niw-master",
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_subnet.django-subnet",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "niw-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:network-interface/eni-0224252419b42b868",
            "attachment": [
              {
                "attachment_id": "eni-attach-0afe3dbdc9db2eb45",
                "device_index": 0,
                "instance": "i-0ee3e72c856b1588e"
              }
            ],
            "id": "eni-0224252419b42b868",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:15:f6:3e:e0:8b",
            "owner_id": "154061203144",
            "private_ip": "10.0.2.91",
            "private_ip_list": [
              "10.0.2.91"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.91"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0937b02a13fc307b2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ee60fc76c075b65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_subnet.django-subnet",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "django-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group/sg-0937b02a13fc307b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0937b02a13fc307b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow tls",
            "name_prefix": "",
            "owner_id": "154061203144",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-sg"
            },
            "tags_all": {
              "Name": "django-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee10444197d80df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "154061203144",
            "id": "sg-0937b02a13fc307b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-003e62639ab718c69",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-003e62639ab718c69",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0937b02a13fc307b2",
            "security_group_rule_id": "sgr-003e62639ab718c69",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-02778d8a3bedfb8ac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-02778d8a3bedfb8ac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0937b02a13fc307b2",
            "security_group_rule_id": "sgr-02778d8a3bedfb8ac",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0255adfee23090c84",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0255adfee23090c84",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0937b02a13fc307b2",
            "security_group_rule_id": "sgr-0255adfee23090c84",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0f43b282106d94dd0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f43b282106d94dd0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0937b02a13fc307b2",
            "security_group_rule_id": "sgr-0f43b282106d94dd0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-03883dcd0ed29a925",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03883dcd0ed29a925",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0937b02a13fc307b2",
            "security_group_rule_id": "sgr-03883dcd0ed29a925",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.django-sg-group",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "django-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:internet-gateway/igw-0bf8db1a82dca67dc",
            "id": "igw-0bf8db1a82dca67dc",
            "owner_id": "154061203144",
            "region": "us-east-1",
            "tags": {
              "Name": "django-igw"
            },
            "tags_all": {
              "Name": "django-igw"
            },
            "vpc_id": "vpc-07ee10444197d80df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "django-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:route-table/rtb-057ffe1b9c1c5d3a9",
            "id": "rtb-057ffe1b9c1c5d3a9",
            "owner_id": "154061203144",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf8db1a82dca67dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "django-route"
            },
            "tags_all": {
              "Name": "django-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee10444197d80df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.django-igw",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "django_table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aae9dd02e9076791",
            "region": "us-east-1",
            "route_table_id": "rtb-057ffe1b9c1c5d3a9",
            "subnet_id": "subnet-00ee60fc76c075b65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.django-igw",
            "module.vpc.aws_route_table.django-route",
            "module.vpc.aws_subnet.django-subnet",
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "django-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:subnet/subnet-00ee60fc76c075b65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ee60fc76c075b65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154061203144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "django-subnet"
            },
            "tags_all": {
              "Name": "django-subnet"
            },
            "vpc_id": "vpc-07ee10444197d80df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "154061203144",
            "id": "subnet-00ee60fc76c075b65",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.django-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "django-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:vpc/vpc-07ee10444197d80df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.2.0/24",
            "default_network_acl_id": "acl-0296e23126820bf8e",
            "default_route_table_id": "rtb-0286d1a9a7f4f8907",
            "default_security_group_id": "sg-04fd5258c13769b65",
            "dhcp_options_id": "dopt-001e3584aea96fecd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ee10444197d80df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0286d1a9a7f4f8907",
            "owner_id": "154061203144",
            "region": "us-east-1",
            "tags": {
              "Name": "django-vpc"
            },
            "tags_all": {
              "Name": "django-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}